--- a/styles.css
+++ b/styles.css
@@ -126,5 +126,12 @@ footer {
     flex-direction: column;
     align-items: center;
   }
+  .portfolio-item img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+    display: block;
+  }
+  
 }
 
